Fix: Use Java 8 API for previous fix
Used API 11 by accident before